--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -802,7 +802,7 @@ section,
   margin: 0;
   font-size: 36px;
   font-weight: 700;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 /*--------------------------------------------------------------
