--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -783,13 +783,21 @@ section,
   }
   
   .section-title h2 {
-    display: inline-block;
-    margin-bottom: 10px;
+    display: block;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  
+  .section-title h2::after {
+    margin: 4px auto;
+    display: block;
   }
   
   .section-title p {
     font-size: 28px;
-    margin-top: 10px;
+    margin-top: 15px;
+    display: block;
+    text-align: center;
   }
 }
 
